# lazybacklog

./: CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md
demo/: demo.tape
docs/superpowers/plans/: 2026-03-14-lazybacklog.md  2026-03-15-demo-gif.md  2026-03-15-demo-mode.md  2026-03-15-project-select.md  2026-03-15-search.md  2026-03-15-status-filter.md  2026-03-22-ui-design-overhaul.md  2026-03-23-open-in-browser.md  2026-03-31-issue-detail-comments.md
docs/superpowers/specs/: 2026-03-14-lazybacklog-design.md  2026-03-15-demo-gif-design.md  2026-03-15-demo-mode-design.md  2026-03-15-project-select-design.md  2026-03-15-search-design.md  2026-03-15-status-filter-design.md  2026-03-22-ui-design-overhaul.md  2026-03-23-open-in-browser-design.md  2026-03-31-issue-detail-comments-design.md
src/: app.rs  config.rs  event.rs  handler.rs  main.rs  mock.rs
src/api/: client.rs  models.rs
src/ui/: filter.rs  issue_detail.rs  issue_list.rs  mod.rs  project_select.rs  space_select.rs  status_filter.rs
