[package]
name = "lazybacklog"
version = "0.1.0"
edition = "2021"
description = "A lazygit-inspired TUI for Nulab's Backlog project management service"
license = "MIT"
repository = "https://github.com/makky0620/lazybacklog"
keywords = ["backlog", "tui", "terminal", "nulab"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
